[package]
name = "shuttle-crond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
chrono = "0.4.24"
cron = "0.12.0"
serde = "1.0.163"
shuttle-axum = "0.16.0"
shuttle-common = "0.16.2"
shuttle-runtime = "0.16.0"
shuttle-service = "0.16.0"
tokio = "1.28.1"
